[coverage:run]
plugins = Cython.Coverage

[build]
build_base = pyb

[build_ext]
inplace = 1

[build_package_protos]
exclude = .*protoc_plugin/protoc_plugin_test\.proto$

[metadata]
license_files = LICENSE

[pytype]
inputs = 
	src/python/grpcio/grpc/experimental
	src/python/grpcio/grpc
	src/python/grpcio_tests/tests_aio
	src/python/grpcio_observability/grpc_observability
	examples/python/auth
	examples/python/helloworld
exclude = 
	**/*_pb2.py
	src/python/grpcio/grpc/framework
	src/python/grpcio/grpc/aio
	src/python/grpcio/grpc/beta
	src/python/grpcio/grpc/__init__.py
	src/python/grpcio/grpc/_simple_stubs.py
disable = "import-error,module-attr,attribute-error"

[egg_info]
tag_build = 
tag_date = 0

